[gd_scene load_steps=2 format=3 uid="uid://cf57h23ilq1xh"]

[ext_resource type="Script" uid="uid://ccorihyewen46" path="res://scenes/enemy_base/enemy_base.gd" id="1_wiwq1"]

[node name="EnemyBase" type="CharacterBody2D" groups=["moveables"]]
collision_layer = 0
script = ExtResource("1_wiwq1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]

[node name="RemovalTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[connection signal="timeout" from="RemovalTimer" to="." method="_on_removal_timer_timeout"]
